# INFO904-IA

./: README.md  bertimental.pt  model.ipynb  pyproject.toml
BERTimental/: README.md  model.safetensors
BERTimental/checkpoint-10853/: config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
