[tool.poetry]
name = "bertimental"
version = "0.1.0"
description = ""
authors = ["Simon LEONARD", "Romain PAJEAN"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.37.2"
datasets = "^2.17.0"
evaluate = "^0.4.1"
accelerate = "^0.27.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
